@@ -23,6 +23,7 @@ Initial inclusion of the stylizer plugin to create user customizable styles from
 #723296 by andrewlevine: Generalize more of CTools helpers so they can be used for non-CTools files.
 #726320 by gordon: Allow the CTools wizard to have query strings in the wizard path.
 #711664 by meclimdul: Make the 'hook' version of plugins now optional and improve code around it.
+#745468 by alevine and Scott Reynolds: Make ajax better able to know what .js/.css was already on the page.
 
 ctools 6.x-1.3 (2010-Feb-01)
 ==============
